--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,8 +2,10 @@ name: Deployment Pipeline
 
 on:
   push:
-    branches:
-      - personal-test
+    branches: [personal-test]
+  pull_request:
+    branches: [personal-test]
+    types: [opened, synchronize]
 
 jobs:
   deploy:
@@ -32,10 +34,11 @@ jobs:
           start: npm run start-test
           wait-on: http://localhost:5000
       - name: Deploy
+        if: ${{ github.event_name == "push" }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP}}
+          heroku_app_name: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"
           heroku_email: ${{secrets.HEROKU_API_EMAIL}}
           healthcheck: http://localhost:5000/health
           rollbackonhealthcheckfailed: true
