--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,13 +8,17 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  deploy:
+  avoid_reduncy:
     runs-on: ubuntu-18.04
     steps:
-      - name: Cancel previous redundant builds
-        uses: styfle/cancel-workflow-action@0.9.1
-        with:
-          access_token: ${{ github.token }}
+    - name: Cancel previous redundant builds
+      uses: styfle/cancel-workflow-action@0.9.1
+      with:
+        access_token: ${{ github.token }}
+    
+  lint:
+    runs-on: ubuntu-18.04
+    steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -25,10 +29,61 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run eslint
+  
+  build:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: npm ci
       - name: Build
         run: npm run build
+      - uses: actions/artifact@v2
+        with:
+          name: dist
+          path: dist
+          archive: true
+  
+  test:
+    needs: [lint, build]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: npm ci
+      - uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
       - name: Test
         run: npm test
+    
+  e2e-test:
+    needs: [lint, build]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: npm ci
+      - uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
       - name: install cypress@8.2.0
         run: npm install -D cypress@8.2.0
       - name: E2E test
@@ -37,7 +92,15 @@ jobs:
           command: npm run test:e2e
           start: npm run start-test
           wait-on: http://localhost:5000
-      - name: Deploy
+    
+  deploy:
+    needs: [test, e2e-test]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Deploy to heroku
         if: ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
