--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,7 @@ jobs:
         run: npm run eslint
   
   build:
+    needs: [lint]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -43,7 +44,7 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
-      - uses: actions/artifact@v2
+      - uses: actions/upload-artifact@v2
         with:
           name: dist
           path: dist
