--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - name: Lint
@@ -39,6 +40,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - name: Build
@@ -59,6 +61,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - uses: actions/download-artifact@v2
@@ -78,6 +81,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
       - uses: actions/download-artifact@v2
