--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,8 +15,20 @@ jobs:
       uses: styfle/cancel-workflow-action@0.9.1
       with:
         access_token: ${{ github.token }}
+  
+  install_dependencies:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
     
   lint:
+    needs: [install_dependencies]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -32,6 +44,7 @@ jobs:
         run: npm run eslint
   
   build:
+    needs: [install_dependencies]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
